# scraping-university-requirements

./: .gitignore  README.md  pyproject.toml  scraping-release.py
